# expenses-app

./: .env_example  Makefile  README.md  alembic.ini  docker-compose.db.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: cov.yml  lint-test.yml
expenses_app/: __init__.py  app.py  controllers.py  database.py  logger.py  main.py  models.py  schemas.py  settings.py  task.md
expenses_app/api/: app.py
expenses_app/api/v1/: controllers.py  database.py  logger.py  models.py  routes.py  schemas.py
expenses_app/bot/: app.py
expenses_app/migrations/: env.py
expenses_app/migrations/versions/: 60845eea3d51_init.py  fedde972974d_init.py
tests/: test_api.py
