[tool.poetry]
name = "expenses-app"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"
packages = [{include = "expenses_app"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
fastapi = "^0.97.0"
sqlalchemy = "^2.0.16"
pydantic = "^1.10.9"
asyncpg = "^0.27.0"
uvicorn = "^0.22.0"
alembic = "^1.11.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
